// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PositionsManagerContract on addCollateral from positionsManager 1`] = `
[
  {
    "$seq": 2,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "cell": "x{DDED1FE8800784F79BB9BDDE39E2B05A2820A591FBCD92F3ACC083685CD65E37ED00489A4B2A2E90EDD000000000020000000200000002000000020000000200000002935F1B401_}",
            "type": "cell",
          },
          "bounce": true,
          "from": "kQCmw0-Nvnap6F8s-77yXEYbduFtd_bSsmDZu6eYT4Oy-Aqh",
          "to": "kQA2ysUTSwHe0FkWC5f5n545p2XeHz3ZlThlhjbj8Quxz1wC",
          "type": "internal",
          "value": 1000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 11407n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "type": "empty",
            },
            "bounce": false,
            "from": "kQA2ysUTSwHe0FkWC5f5n545p2XeHz3ZlThlhjbj8Quxz1wC",
            "to": "kQA8J7zdze7xzxWC0UEFLI_ebJedZgQbQuay8b9oAkTSWQkO",
            "type": "internal",
            "value": 987593000n,
          },
        ],
      },
    ],
  },
]
`;

exports[`PositionsManagerContract on repayStablecoin from positionsManager with healthy position 1`] = `
[
  {
    "$seq": 6,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "cell": "x{BEF31E07800784F79BB9BDDE39E2B05A2820A591FBCD92F3ACC083685CD65E37ED00489A4B200000000000000C8000000020000000200000002000000020000000200000002935F1B401_}",
            "type": "cell",
          },
          "bounce": true,
          "from": "kQCmw0-Nvnap6F8s-77yXEYbduFtd_bSsmDZu6eYT4Oy-Aqh",
          "to": "kQA2ysUTSwHe0FkWC5f5n545p2XeHz3ZlThlhjbj8Quxz1wC",
          "type": "internal",
          "value": 1000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 13107n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "cell": "x{64990F80800784F79BB9BDDE39E2B05A2820A591FBCD92F3ACC083685CD65E37ED00489A4B22C9_}",
              "type": "cell",
            },
            "bounce": true,
            "from": "kQA2ysUTSwHe0FkWC5f5n545p2XeHz3ZlThlhjbj8Quxz1wC",
            "to": "kQCDr0Gm-nivCD9KWPb6JkiDulGZ8eNb2Xm_HNi39oyNbBwJ",
            "type": "internal",
            "value": 985482000n,
          },
        ],
      },
    ],
  },
  {
    "$seq": 7,
    "events": [
      {
        "$type": "received-bounced",
        "message": {
          "body": {
            "type": "empty",
          },
          "bounce": false,
          "from": "kQCDr0Gm-nivCD9KWPb6JkiDulGZ8eNb2Xm_HNi39oyNbBwJ",
          "to": "kQA2ysUTSwHe0FkWC5f5n545p2XeHz3ZlThlhjbj8Quxz1wC",
          "type": "internal",
          "value": 984482000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 7124n,
      },
    ],
  },
]
`;

exports[`PositionsManagerContract on stablecoin burned  1`] = `
[
  {
    "$seq": 8,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "cell": "x{E0CD050E800784F79BB9BDDE39E2B05A2820A591FBCD92F3ACC083685CD65E37ED00489A4B22C9_}",
            "type": "cell",
          },
          "bounce": true,
          "from": "kQCDr0Gm-nivCD9KWPb6JkiDulGZ8eNb2Xm_HNi39oyNbBwJ",
          "to": "kQA2ysUTSwHe0FkWC5f5n545p2XeHz3ZlThlhjbj8Quxz1wC",
          "type": "internal",
          "value": 1000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 12752n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "cell": "x{10CDA82C800784F79BB9BDDE39E2B05A2820A591FBCD92F3ACC083685CD65E37ED00489A4B200000000000000C9_}",
              "type": "cell",
            },
            "bounce": true,
            "from": "kQA2ysUTSwHe0FkWC5f5n545p2XeHz3ZlThlhjbj8Quxz1wC",
            "to": "kQCmw0-Nvnap6F8s-77yXEYbduFtd_bSsmDZu6eYT4Oy-Aqh",
            "type": "internal",
            "value": 985785000n,
          },
        ],
      },
    ],
  },
]
`;

exports[`PositionsManagerContract on withdraw collateral decrease position collateral  1`] = `
[
  {
    "$seq": 10,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "cell": "x{CB461808800784F79BB9BDDE39E2B05A2820A591FBCD92F3ACC083685CD65E37ED00489A4B22C8000000020000000200000002000000020000000200000002935F1B401_}",
            "type": "cell",
          },
          "bounce": true,
          "from": "kQCmw0-Nvnap6F8s-77yXEYbduFtd_bSsmDZu6eYT4Oy-Aqh",
          "to": "kQA2ysUTSwHe0FkWC5f5n545p2XeHz3ZlThlhjbj8Quxz1wC",
          "type": "internal",
          "value": 1000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 13292n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "cell": "x{C3CD33BF800784F79BB9BDDE39E2B05A2820A591FBCD92F3ACC083685CD65E37ED00489A4B200000000000000C9_}",
              "type": "cell",
            },
            "bounce": true,
            "from": "kQA2ysUTSwHe0FkWC5f5n545p2XeHz3ZlThlhjbj8Quxz1wC",
            "to": "kQCmw0-Nvnap6F8s-77yXEYbduFtd_bSsmDZu6eYT4Oy-Aqh",
            "type": "internal",
            "value": 98537000n,
          },
        ],
      },
    ],
  },
]
`;

exports[`PositionsManagerContract on withdraw collateral revert if more than exists  1`] = `
[
  {
    "$seq": 9,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "cell": "x{CB461808800784F79BB9BDDE39E2B05A2820A591FBCD92F3ACC083685CD65E37ED00489A4B232C000000020000000200000002000000020000000200000002935F1B401_}",
            "type": "cell",
          },
          "bounce": true,
          "from": "kQCmw0-Nvnap6F8s-77yXEYbduFtd_bSsmDZu6eYT4Oy-Aqh",
          "to": "kQA2ysUTSwHe0FkWC5f5n545p2XeHz3ZlThlhjbj8Quxz1wC",
          "type": "internal",
          "value": 1000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 13292n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "cell": "x{C3CD33BF800784F79BB9BDDE39E2B05A2820A591FBCD92F3ACC083685CD65E37ED00489A4B2000000000000012D_}",
              "type": "cell",
            },
            "bounce": true,
            "from": "kQA2ysUTSwHe0FkWC5f5n545p2XeHz3ZlThlhjbj8Quxz1wC",
            "to": "kQCmw0-Nvnap6F8s-77yXEYbduFtd_bSsmDZu6eYT4Oy-Aqh",
            "type": "internal",
            "value": 98537000n,
          },
        ],
      },
    ],
  },
]
`;

exports[`PositionsManagerContract on withdrawStablecoin from positionsManager with healthy position 1`] = `
[
  {
    "$seq": 4,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "cell": "x{6C3989BB800784F79BB9BDDE39E2B05A2820A591FBCD92F3ACC083685CD65E37ED00489A4B200000004A817C800000000020000000200000002000000027735940000000002935F1B401_}",
            "type": "cell",
          },
          "bounce": true,
          "from": "kQCmw0-Nvnap6F8s-77yXEYbduFtd_bSsmDZu6eYT4Oy-Aqh",
          "to": "kQA2ysUTSwHe0FkWC5f5n545p2XeHz3ZlThlhjbj8Quxz1wC",
          "type": "internal",
          "value": 1000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 35301n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "cell": "x{903559B2800784F79BB9BDDE39E2B05A2820A591FBCD92F3ACC083685CD65E37ED00489A4B2A04A817C801_}",
              "type": "cell",
            },
            "bounce": true,
            "from": "kQA2ysUTSwHe0FkWC5f5n545p2XeHz3ZlThlhjbj8Quxz1wC",
            "to": "kQCDr0Gm-nivCD9KWPb6JkiDulGZ8eNb2Xm_HNi39oyNbBwJ",
            "type": "internal",
            "value": 98557000n,
          },
        ],
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "cell": "x{96096519800784F79BB9BDDE39E2B05A2820A591FBCD92F3ACC083685CD65E37ED00489A4B200000004A817C801_}",
              "type": "cell",
            },
            "bounce": true,
            "from": "kQA2ysUTSwHe0FkWC5f5n545p2XeHz3ZlThlhjbj8Quxz1wC",
            "to": "kQCmw0-Nvnap6F8s-77yXEYbduFtd_bSsmDZu6eYT4Oy-Aqh",
            "type": "internal",
            "value": 963236000n,
          },
        ],
      },
    ],
  },
  {
    "$seq": 5,
    "events": [
      {
        "$type": "received-bounced",
        "message": {
          "body": {
            "type": "empty",
          },
          "bounce": false,
          "from": "kQCDr0Gm-nivCD9KWPb6JkiDulGZ8eNb2Xm_HNi39oyNbBwJ",
          "to": "kQA2ysUTSwHe0FkWC5f5n545p2XeHz3ZlThlhjbj8Quxz1wC",
          "type": "internal",
          "value": 97557000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 7124n,
      },
    ],
  },
]
`;

exports[`PositionsManagerContract on withdrawStablecoin from positionsManager with unhealthy position 1`] = `
[
  {
    "$seq": 3,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "cell": "x{6C3989BB800784F79BB9BDDE39E2B05A2820A591FBCD92F3ACC083685CD65E37ED00489A4B2000001D1A94A2000000000020000000200000002000000027735940000000002935F1B401_}",
            "type": "cell",
          },
          "bounce": true,
          "from": "kQCmw0-Nvnap6F8s-77yXEYbduFtd_bSsmDZu6eYT4Oy-Aqh",
          "to": "kQA2ysUTSwHe0FkWC5f5n545p2XeHz3ZlThlhjbj8Quxz1wC",
          "type": "internal",
          "value": 1000000000n,
        },
      },
      {
        "$type": "failed",
        "errorCode": 43504,
        "errorMessage": "position will not be healthy",
      },
      {
        "$type": "sent-bounced",
        "message": {
          "body": {
            "type": "empty",
          },
          "bounce": false,
          "from": "kQA2ysUTSwHe0FkWC5f5n545p2XeHz3ZlThlhjbj8Quxz1wC",
          "to": "kQCmw0-Nvnap6F8s-77yXEYbduFtd_bSsmDZu6eYT4Oy-Aqh",
          "type": "internal",
          "value": 974558000n,
        },
      },
    ],
  },
]
`;

exports[`PositionsManagerContract should deploy correctly and send newPositionId request to positionsManager 1`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "cell": "x{946A98B60000000000000000}",
            "type": "cell",
          },
          "bounce": true,
          "from": "kQAI-3FJVc_ywSuY4vq0bYrzR7S4Och4y7bTU_i5yLOB3A6P",
          "to": "kQA2ysUTSwHe0FkWC5f5n545p2XeHz3ZlThlhjbj8Quxz1wC",
          "type": "internal",
          "value": 1000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 15776n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "cell": "x{0D74C595800784F79BB9BDDE39E2B05A2820A591FBCD92F3ACC083685CD65E37ED00489A4B3_}",
              "type": "cell",
            },
            "bounce": true,
            "from": "kQA2ysUTSwHe0FkWC5f5n545p2XeHz3ZlThlhjbj8Quxz1wC",
            "to": "kQCmw0-Nvnap6F8s-77yXEYbduFtd_bSsmDZu6eYT4Oy-Aqh",
            "type": "internal",
            "value": 98601000n,
          },
        ],
      },
    ],
  },
  {
    "$seq": 1,
    "events": [
      {
        "$type": "received-bounced",
        "message": {
          "body": {
            "type": "empty",
          },
          "bounce": false,
          "from": "kQCmw0-Nvnap6F8s-77yXEYbduFtd_bSsmDZu6eYT4Oy-Aqh",
          "to": "kQA2ysUTSwHe0FkWC5f5n545p2XeHz3ZlThlhjbj8Quxz1wC",
          "type": "internal",
          "value": 97601000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 7124n,
      },
    ],
  },
]
`;
